# GameOfLife

./: .gitignore  README.md  game.cpp  game.h  game.hpp  gamegui.cpp  gamegui.h  gamegui.hpp  main.cpp  makefile  presets.cpp  presets.h  presets.hpp  utils.cpp  utils.hpp
src/: CMakeLists.txt  game.hpp  utils.hpp
src/game/: CMakeLists.txt
src/gameGui/: CMakeLists.txt
src/presets/: CMakeLists.txt  presets.hpp
src/utils/: CMakeLists.txt
